[package]
name = "cw721-hero"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "^1.2"
cosmwasm-std = "^1.2"
cw-storage-plus = "1.1.0"
cw2 = "^1.1"
cw20 = "^1.1"
cw721 = "0.18.0"
cw721-base = "0.18.0"
cw721-metadata-onchain = "0.15.0"
cw721-non-transferable = "0.18.0"
schemars = "^0.8"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = "^1.0"
